@@ -1,13 +1,12 @@
 import multiprocessing
-import numpy
-import scipy
-import matplotlib
-import periodictable
+import warnings
 
 
 if __name__ == "__main__":
     # needed for windows using multiprocessing!
     multiprocessing.freeze_support()
 
+    warnings.filterwarnings("ignore", "(?s).*MATPLOTLIBDATA.*",
+                            category=UserWarning)
     from refnx.reflect import main
     main()
